--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module", 
   "scripts": {
-    "docs:dev": "vitepress dev docs --open --port 9527",
+    "docs:dev": "vitepress dev docs --open --port 8888",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
     "deploy": "bash deploy.sh && node app.js",
